init spring ai 2.0